obscure bug that does not occur on all browsers, maybe this will fix it. found out about this bug due to following stackoverflow:
'Your image is actually upside down. But it has a meta attribute "Orientation" which tells the viewer it should be the rotated 180 degrees. Some devices/viewers don't obey this rule.

Open it in Chrome: right way up Open it in FF: right way up Open it in IE: upside down

Open it in Paint: Upside down Open it in Photoshop: Right way up. etc.'

--- a/style.css
+++ b/style.css
@@ -26,16 +26,18 @@
 #bios h1{
 	margin-left: 40px;
 }
-/*
+
 img {
 	display: inline-block;
 	margin-left: 40px;
 	border: 2px solid black; 
 	margin-right: 40px;
 	max-width: 500px; 
-	/*float: left; maybe not needed
+	image-orientation: from-image; 
+	/*not sure why but piano and kevin were displaying wrong way on edge, but perfectly fine on firefox */
+	/*float: left; maybe not needed*/
 }
-*/
+
 .container {
   border: 1px solid black;
   white-space: nowrap; /** force the elements to stay side by side **/
